--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ body {
 }
 
 .sitenav__list-item {
-  padding: 2rem 0;
   position: relative;
+  padding: 2rem 0;
 }
 .sitenav__list-item:hover .hidden__list {
   opacity: 1;
@@ -115,34 +115,25 @@ body {
 }
 .sitenav__list-item .hidden__list {
   display: flex;
-  flex-direction: column;
+  border-radius: 1rem;
+  background-color: #fff;
   transition: 0.3s;
   width: 15.3rem;
   position: absolute;
   padding: 1.5rem 0;
-  border-radius: 1rem;
-  background-color: #fff;
   gap: 0.5rem;
   top: 5.4rem;
+  flex-direction: column;
   right: 0;
   opacity: 0;
   visibility: hidden;
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.149126);
 }
-.sitenav__list-item
-  .hidden__list
-  .hidden__list-item
-  .inner-list
-  .inner-list-item {
-  padding: 1rem 2.5rem;
-  cursor: pointer;
-}
-
 .sitenav__list-item .hidden__list .hidden__list-item {
   display: flex;
   align-items: center;
-  padding: 1rem 2.5rem;
   gap: 1.5rem;
+  padding: 1rem 2.5rem;
   cursor: pointer;
 }
 .sitenav__list-item .hidden__list .hidden__list-item:hover {
@@ -152,10 +143,10 @@ body {
   opacity: 1;
   visibility: visible;
 }
-
 .sitenav__list-item .hidden__list .hidden__list-item .inner-list {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   transition: 0.3s;
   width: 15rem;
   position: absolute;
@@ -165,39 +156,78 @@ body {
   border-radius: 1rem;
   background-color: #fff;
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.149126);
-  gap: 1rem;
   text-align: center;
   opacity: 0;
   visibility: hidden;
 }
-
-.sitenav__list-item .hidden__list .hidden__list-item :hover {
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item {
+  padding: 1rem 2.5rem;
+  cursor: pointer;
+}
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item:hover {
   background-color: #ddd;
 }
-.sitenav__list-item .hidden__list .hidden__list-item :hover {
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item:hover
+  .last-list {
   opacity: 1;
   visibility: visible;
 }
-.sitenav__list-item .hidden__list .hidden__list-item .last-list {
-  padding: 1rem 1.5rem;
-  border-radius: 1rem;
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item
+  .last-list {
   transition: 0.3s;
+  border-radius: 1rem;
+  background-color: #fff;
   position: absolute;
   top: 2.5rem;
   top: 1.5rem;
   left: 96%;
+  padding: 1rem 1.5rem;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.149126);
+  opacity: 0;
+  visibility: hidden;
 }
-.sitenav__list-item .hidden__list .hidden__list-item .last-list:hover {
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item
+  .last-list:hover {
   background-color: #ddd;
-}
-.sitenav__list-item .hidden__list .hidden__list-item {
-  top: 6rem;
-}
-.sitenav__list-item .hidden__list .hidden__list-item {
-  top: 10.5rem;
 }
 .sitenav__list-item .second-hidden {
   width: 11.6rem;
+}
+
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item {
+  top: 10.5rem;
+}
+
+.sitenav__list-item
+  .hidden__list
+  .hidden__list-item
+  .inner-list
+  .inner-list-item {
+  top: 6rem;
 }
 
 .main-container {
